Making the bot compatible with multiple servers

--- a/MixlrBot/appsettings.json
+++ b/MixlrBot/appsettings.json
@@ -1,7 +1,11 @@
 {
   "DiscordBotToken": "Fill in secrets",
-  "DiscordGuildId": "Fill in secrets",
-  "DiscordRoomId": "Fill in secrets",
+  "DiscordGuilds": [
+    {
+      "Guild": "Fill in secrets",
+      "Channel": "Fill in secrets"
+    }
+  ],
   "MixlrApiUrl": "https://api.mixlr.com",
   "MixlrUsers": [
     "deadlypliers",
